Release 070119
* The "make" command has been added from OpenSolaris sources. Important
  changes to the OpenSolaris version are:

  * The "-j jobs" option is available, based on code distributed by Sun
    that was previously disabled.
  * SUN_MAKE_COMPAT_MODE is "GNU" by default. This has the effect that
    macro definitions on the command line become part of the MAKEFLAGS
    variable, and thus override definitions within makefiles in recursive
    operation. Also "$<" resolves to the first prerequisite in a target
    rule. Setting "SUN_MAKE_COMPAT_MODE=SUN" in the environment restores
    the previous behavior.

* sccs: Accept the "-a", "-p", and "-B" options to "diff" with the "diffs"
  and "sccsdiff" sub-commands.
* sccsdiff: Accept the "-a" and "-B" options to "diff"; also accept the
  "-P" option but pass it as "-p" to "diff".
* get: Do not dump core on a corrupted s-file.
* Mac OS X portability fixes (Stefan Tramm).
* SCCS: Handle the timezone offset on FreeBSD (bugreport by Joerg Schilling).
* SCCS: Use O_EXCL when opening files with unique names (thanks to Joerg
  Schilling for notification).

Release 070102
* delta: If the "bdiff" utility cannot be found, execute regular "diff"
  instead. This removes a circular dependency on the Heirloom Toolchest
  on systems lacking "bdiff" in their default installation, such as
  Linux or FreeBSD.
* SCCS: Do not use the SYS_NMLN constant since it is not portable (bug
  reported by John Cowan).
* help: Fixed for arguments consisting of letters only (command usage),
  default messages file, and error message if no appropriate key could
  be found. These problems had been introduced with the removal of the
  internationalization code during the port.

Release 061220
* The SCCS version control system has been added as a port of the source
  code released by Sun yesterday.
* lex: An appropriate prototype for yyreject() is now supplied when the
  -e or -w options are used.

Release 051216