@@ -1,4 +1,20 @@
 #
+# This is the shell used for the compilation phase and the default shell
+# for the traditional variant of the "make" utility built. It needs not
+# conform to POSIX. The system shell should work fine; for maximum
+# compatibility with traditional tools, the Heirloom Bourne shell is
+# recommended. It then must obviously be compiled and installed first.
+#
+SHELL = /sbin/sh
+
+#
+# Specify the path name for a POSIX-conforming shell here. For example,
+# Solaris users should insert /usr/xpg4/bin/sh. This shell is used as
+# default shell for the POSIX variant of the "make" utility built.
+#
+POSIX_SHELL = /bin/sh
+
+#
 # A BSD-compatible install command.
 #
 INSTALL=/usr/ucb/install
